--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -63,13 +63,34 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin:right;
+      transition-duration:100ms;
+      transition-timing-function: ease-in-out;
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector(".second-hand");
+    const minuteHand = document.querySelector(".min-hand");
+    const hourHand = document.querySelector(".hour-hand");
+
+    function setTime() {
+      const date = new Date();
+      let hours = date.getHours()%12;
+      let minutes = date.getMinutes();
+      let seconds = date.getSeconds();
 
 
+      let hourRotate = ((hours+3)%12)*30;
+      hourHand.style.transform=`rotate(${hourRotate}deg)`;
+      let minuteRotate = ((minutes+15)%60)*6;
+      minuteHand.style.transform=`rotate(${minuteRotate}deg)`;
+      let secondRotate = ((seconds+15)%60)*6;
+      secondHand.style.transform=`rotate(${secondRotate}deg)`;
+    }
+
+    setInterval(setTime,1000);
   </script>
 </body>
 </html>
