--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -23,9 +23,25 @@
 
   <style>
 
+    :root {
+      --spacing:10px;
+      --blur:10px;
+      --base:#ffc600;
+    }
+
+    img {
+      filter: blur(var(--blur));
+      border-width:var(--spacing);
+      border-color:var(--base);
+    }
+
+    .hl {
+      color:var(--base);
+    }
     /*
       misc styles, nothing to do with CSS variables
     */
+
 
     body {
       text-align: center;
@@ -43,9 +59,23 @@
     input {
       width: 100px;
     }
+
+    img {
+      border-style:solid;
+    }
   </style>
 
   <script>
+    const root = document.querySelector(":root");
+    const inputs = document.querySelectorAll("input");
+
+    function updateValue() {
+      const suffix = this.dataset.sizing || '';
+      root.style.setProperty(`--${this.name}`,`${this.value + suffix}`);
+    }
+
+    inputs.forEach(input => input.addEventListener("input",updateValue));
+
   </script>
 
 </body>
