--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,68 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const q1 = inventors.filter(inventor => {
+      return inventor.year>=1500&&inventor.year<1600;
+    })
+    console.table(q1);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
 
+    const q2 = inventors.map(inventor => (
+      `${inventor.first} ${inventor.last}`
+    ))
+    console.log(q2);
+
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const q3 = inventors.sort((inventor1,inventor2) => {
+      return inventor1.year-inventor2.year;
+    })
+    console.log(q3);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const q4 = inventors.reduce((sum,inventor) => {
+      return sum+(inventor.passed-inventor.year);
+    },0)
+    console.log(q4);
 
     // 5. Sort the inventors by years lived
+    const q5 = inventors.sort((inventor1,inventor2) => {
+      return (inventor2.passed-inventor2.year)-(inventor1.passed-inventor1.year);
+    })
+    console.log(q5);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
+
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+
+    const q7 = inventors.sort((inventor1,inventor2) => {
+      if(inventor1.last>inventor2.last) {
+        return 1;
+      }
+      if(inventor1.last<inventor2.last) {
+        return -1;
+      }
+      return 0;
+    })
+    console.log(q7);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const q8 = data.reduce((sum,word) => {
+      if(!sum[word]) sum[word] = 0;
+      sum[word] +=1;
+      return sum;
+    },{})
+    console.log(q8);
 
   </script>
 </body>
