--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -27,6 +27,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display:flex;
     }
 
     .panel {
@@ -44,6 +45,10 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex:1;
+      display:flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -57,6 +62,10 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      flex:1;
     }
 
     .panel p {
@@ -70,8 +79,23 @@
       font-size: 4em;
     }
 
+
+    .panel p:first-child {
+      transform:translateY(-100%);
+    }
+    .panel.open p:first-child {
+      transform:translateY(0);
+    }
+    .panel p:last-child {
+      transform:translateY(100%);
+    }
+    .panel.open p:last-child {
+      transform:translateY(0);
+    }
+
     .panel.open {
       font-size: 40px;
+      flex:5;
     }
 
   </style>
@@ -106,6 +130,18 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll(".panel");
+    const panel = document.querySelector(".panel");
+
+    function onClick() {
+      if(this.classList.contains("open")) {
+        this.classList.remove("open");
+      } else {
+        this.classList.add("open");
+
+      }
+    }
+    panels.forEach(panel => panel.addEventListener("click",onClick));
 
   </script>
 
