--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -28,14 +28,34 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
+    const isAdult = people.some(person => {
+      return (2023 - person.year)>18;
+    })
+    console.log({isAdult});
+
+    const allAdults = people.every(person => {
+      return (2023-person.year)>18;
+    })
+    console.log({allAdults});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const q3 = comments.find(comment => {
+      return comment.id ==823423
+    })
+    console.log({q3});
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const q4 = comments.findIndex(comment => {
+      return comment.id==823423;
+    })
+    console.log({q4});
+    comments.splice(q4,1);
+    console.log(comments);
 
   </script>
 </body>
