--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -12,7 +12,23 @@
 
 <script>
   window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+  const words = document.querySelector(".words");
 
+  const recognition = new SpeechRecognition();
+  recognition.interimResults = false;
+  recognition.lang = "en";
+  recognition.start();
+
+
+  recognition.addEventListener("result",e => {
+    var result = e.results[0][0].transcript
+    console.log(result);
+    var p = document.createElement("p");
+    p.innerHTML = result;
+    words.appendChild(p);
+  })
+
+  recognition.addEventListener("end", recognition.start);
 
 </script>
 
